style: :lipstick: Hot fixed dark mode social path
Still need improvements

--- a/src/styles/SocialPath.module.css
+++ b/src/styles/SocialPath.module.css
@@ -10,8 +10,8 @@ div.container {
   /* border: 1px solid #000; */
   padding: 1rem;
   border-radius: 0.5rem;
-  border: 1px solid #eaeaea;
-  background-color: rgba(250, 250, 250, 0.8);
+  border: 1px solid light-dark(#eaeaea, #1e1e1e);
+  background-color: light-dark(rgba(250, 250, 250, 0.8), rgba(30, 30, 30, 0.8));
   backdrop-filter: blur(8px);
   gap: 1rem;
   /* box-shadow: 2px 2px 1px 0px rgba(0, 0, 0, 0.05); */
@@ -25,7 +25,7 @@ div.container {
 
   .icon {
     font-size: 1.8rem;
-    color: #24292e;
+    color: light-dark(#24292e, #c9d1d9);
 
     @media (hover: hover) and (pointer: fine) {
       &:hover {
@@ -35,11 +35,11 @@ div.container {
   }
 
   a:first-of-type .icon {
-    color: #0e76a8;
+    color: light-dark(#0e76a8, #0e76a8);
   }
 
   a:nth-of-type(3) .icon {
-    color: #0e9f0e;
+    color: light-dark(#0e9f0e, #0e9f0e);
   }
 
   a:last-of-type .icon {
